--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "vendor/**/*"
   ],
   "dependencies": {
-    "debug": "ngokevin/debug#noTimestamp",
+    "debug": "github:aframeless/debug#noTimestamp",
     "deep-assign": "^2.0.0",
     "document-register-element": "dmarcos/document-register-element#8ccc532b7f3744be954574caf3072a5fd260ca90",
     "load-bmfont": "^1.2.3",
