--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
   ],
   "dependencies": {
     "debug": "github:aframeless/debug#noTimestamp",
-    "deep-assign": "^2.0.0",
     "document-register-element": "dmarcos/document-register-element#8ccc532b7f3744be954574caf3072a5fd260ca90",
     "load-bmfont": "^1.2.3",
+    "lodash.merge": "^4.6.2",
     "super-animejs": "^3.1.0",
     "super-three": "^0.137.0",
     "three-bmfont-text": "dmarcos/three-bmfont-text#21d017046216e318362c48abd1a48bddfb6e0733"
